--- a/src/index.scss
+++ b/src/index.scss
@@ -23,7 +23,7 @@ svg {
 }
 
 .sidebar {
-    flex: 0 0 265px;
+    flex: 0 0 285px;
     background-color: #ffffff;
     box-shadow: 0 0 3px rgba(0, 0, 0, .2);
     position: relative;
@@ -46,9 +46,11 @@ svg {
 }
 
 .topbar {
-    border-bottom: 1px solid rgba(#000000, .1);
-    padding-bottom: 5px;
     margin-bottom: 20px;
+
+    .button {
+        margin-right: 5px;
+    }
 }
 
 .colors {
@@ -111,9 +113,10 @@ svg {
     position: relative;
     padding: 10px;
     box-shadow: 0 1px 3px rgba(#000000, .15);
-    height: 125px;
-    width: 125px;
+    height: 140px;
+    width: 140px;
     background-color: #ffffff;
+    border-radius: 2px;
 
     &__result {
         display: flex;
@@ -134,6 +137,7 @@ svg {
         padding: 0 4px;
         font-weight: 500;
         line-height: 20px;
+        color: rgba(#000000, .75);
 
         &--fail {
             color: red;
@@ -156,10 +160,63 @@ svg {
     font-size: 14px;
     vertical-align: middle;
     background-color: grayscale(#214cc5);
+    white-space: nowrap;
 
     &--primary {
         background-color: #214cc5;
         color: #ffffff;
+    }
+}
+
+.picker {
+    display: flex;
+    &__input {
+        display: flex;
+        flex: 1 1 auto;
+        border: 1px solid rgba(#000000, .1);
+        border-radius: 2px;
+        position: relative;
+        input[type="text"] {
+            background-color: #ffffff;
+            border: none;
+            margin: 0;
+            height: 100%;
+            flex: 1 1 auto;
+            font-size: 14px;
+            padding: 5px 7px;
+            width: 100%;
+        }
+    }
+    &__swatch {
+        border: none;
+        background-color: transparent;
+        flex: 0 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: inherit;
+        cursor: pointer;
+        opacity: .5;
+        transition: opacity .2s ease;
+
+        svg {
+            width: 16px;
+            height: 16px;
+        }
+
+        &:hover, &:focus {
+            opacity: 1;
+        }
+    }
+    &__colorpicker {
+        position: absolute;
+        top: calc(100% + 10px);
+        left: 50%;
+        z-index: 10;
+    }
+    .button {
+        flex: 0 0 auto;
+        margin-left: 10px;
     }
 }
 
