--- a/src/index.scss
+++ b/src/index.scss
@@ -139,15 +139,18 @@ svg {
         line-height: 20px;
         color: rgba(#000000, .75);
 
-        &--fail {
-            color: red;
-        }
-
         svg {
             width: 20px;
             height: 20px;
             display: block;
         }
+    }
+
+    &__ratio {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        line-height: 1;
     }
 }
 
