Add better active state for tabs

--- a/src/index.scss
+++ b/src/index.scss
@@ -169,6 +169,11 @@ svg {
         background-color: #214cc5;
         color: #ffffff;
     }
+
+    &--secondary {
+        background-color: #444444;
+        color: #ffffff;
+    }
 }
 
 .picker {
