--- a/src/index.scss
+++ b/src/index.scss
@@ -61,6 +61,7 @@ svg {
     padding-left: 0;
     list-style: none;
     line-height: $height;
+    color: #000000;
 
     &__item {
         border-bottom: 1px solid rgba(#000000, .1);
@@ -76,6 +77,7 @@ svg {
         border-radius: 2px;
         box-shadow: 0 1px 5px rgba(#000000, .25);
         margin-right: 10px;
+        transition: flex-basis .2s ease;
     }
 
     &__remove {
@@ -101,11 +103,11 @@ svg {
 .swatches {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 -5px -5px -5px;
+    margin: 0 -2px -2px -2px;
     
     &__swatch {
-        padding: 0 5px;
-        margin-bottom: 10px;
+        padding: 0 2px;
+        margin-bottom: 4px;
     }
 }
 
