--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -8,7 +8,12 @@
     line-height: 1;
 
     &--primary {
-        background-color: #2C7A7B;
+        background-color: #718096;
         color: #ffffff;
+    }
+
+    &[disabled] {
+        opacity: .35;
+        cursor: not-allowed;
     }
 }
