--- a/src/components/Swatch/swatch.scss
+++ b/src/components/Swatch/swatch.scss
@@ -10,6 +10,10 @@
     transition: transform .2s ease, box-shadow .2s ease;
     cursor: pointer;
     position: relative;
+    display: block;
+    padding: 0;
+    width: 100%;
+    text-align: left;
 
     &:hover, &:focus {
         transform: scale(1.25);
