Move error message into Swatches, and add Controls

--- a/src/components/Colors/Colors.scss
+++ b/src/components/Colors/Colors.scss
@@ -4,12 +4,7 @@
     flex-direction: column;
     align-items: center;
     max-width: 720px;
-    margin: 0 auto 25px auto;
-
-    & > p {
-        color: #9B2C2C;
-        margin-top: 15px;
-    }
+    margin: 25px auto 0 auto;
 
     &__swatches {
         display: flex;
