--- a/src/components/Picker/Picker.scss
+++ b/src/components/Picker/Picker.scss
@@ -1,6 +1,6 @@
 .picker {
     display: flex;
-    margin: 0 auto 25px;
+    margin: 0 auto;
     max-width: 520px;
     background-color: #ffffff;
     padding: 3px;
