--- a/src/components/Swatches/swatches.scss
+++ b/src/components/Swatches/swatches.scss
@@ -3,6 +3,12 @@
     flex-wrap: wrap;
     margin: 0 -5px 90px;
 
+    &__error {
+        color: #9B2C2C;
+        text-align: center;
+        margin-bottom: 25px;
+    }
+
     &__swatch {
         flex: 0 0 100%;
         max-width: (100%/1);
@@ -12,8 +18,8 @@
 
     &__none {
         width: 100%;
-        max-width: 520px;
-        margin: 50px auto;
+        max-width: 480px;
+        margin: 0 auto;
     }
 
     @media screen and (min-width: 480px) {
