--- a/src/components/Swatch/swatch.scss
+++ b/src/components/Swatch/swatch.scss
@@ -14,6 +14,7 @@
     padding: 0;
     width: 100%;
     text-align: left;
+    border: none;
 
     &:hover, &:focus {
         transform: scale(1.25);
