--- a/src/components/Swatches/swatches.scss
+++ b/src/components/Swatches/swatches.scss
@@ -1,12 +1,22 @@
 .swatches {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -5px 90px;
+    margin-bottom: 90px;
 
     &__error {
         color: #9B2C2C;
         text-align: center;
         margin-bottom: 25px;
+    }
+
+    &__info {
+        text-align: center;
+        font-size: 14px;
+        color: #4A5568;
+    }
+
+    &__swatches {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 -5px;
     }
 
     &__swatch {
