resize text for error & info message

--- a/src/components/Swatches/swatches.scss
+++ b/src/components/Swatches/swatches.scss
@@ -5,6 +5,7 @@
         color: #9B2C2C;
         text-align: center;
         margin-bottom: 25px;
+        font-size: 18px;
     }
 
     &__info {
