--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,7 +16,7 @@
             display: inline-block;
         }
         svg {
-            color: #285E61;
+            color: #285e61;
         }
     }
 
@@ -27,9 +27,10 @@
         vertical-align: middle;
         margin-left: 8px;
         cursor: pointer;
-        &:hover, &:focus {
+        &:hover,
+        &:focus {
             svg {
-                color: #2C7A7B;
+                color: #2c7a7b;
             }
         }
     }
