--- a/src/components/SwatchDetail/SwatchDetail.scss
+++ b/src/components/SwatchDetail/SwatchDetail.scss
@@ -1,5 +1,4 @@
 .swatch-detail {
-
     font-size: 14px;
 
     &__preview {
@@ -45,7 +44,7 @@
         p {
             font-size: 24px;
             font-weight: 600;
-            color: #1A202C;
+            color: #1a202c;
         }
     }
 
@@ -61,36 +60,38 @@
     &__level {
         font-size: 12px;
         display: flex;
-        border-top: 1px solid #CBD5E0;
+        border-top: 1px solid #cbd5e0;
         border-radius: 2px;
         padding: 10px 0;
 
         &-label {
             flex: 1 1 auto;
             h3 {
-                color: #1A202C;
+                color: #1a202c;
                 font-size: 14px;
             }
-            h3, p {
+            h3,
+            p {
                 margin-bottom: 0;
             }
         }
         &-score {
             width: 100px;
-            border-left: 1px solid #CBD5E0;
+            border-left: 1px solid #cbd5e0;
             margin-left: 10px;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
 
-            strong, span {
+            strong,
+            span {
                 display: block;
             }
             strong {
                 font-size: 16px;
                 font-weight: 700;
-                letter-spacing: .5px;
+                letter-spacing: 0.5px;
             }
             span {
                 font-size: 12px;
@@ -98,10 +99,10 @@
             }
 
             &--pass {
-                color: #2F855A;
+                color: #2f855a;
             }
             &--fail {
-                color: #C53030;
+                color: #c53030;
             }
         }
     }
@@ -129,23 +130,23 @@
     .swatch-detail {
         &__detail {
             p {
-                color: #EDF2F7;
+                color: #edf2f7;
             }
         }
         &__level {
-            border-top-color: #4A5568;
+            border-top-color: #4a5568;
             color: #718096;
             &-score {
-                border-left-color: #4A5568;
+                border-left-color: #4a5568;
                 &--fail {
-                    color: #F56565;
+                    color: #f56565;
                 }
                 &--pass {
-                    color: #48BB78;
+                    color: #48bb78;
                 }
             }
             h3 {
-                color: #EDF2F7;
+                color: #edf2f7;
             }
         }
     }
