--- a/src/components/Swatches/swatches.scss
+++ b/src/components/Swatches/swatches.scss
@@ -2,7 +2,7 @@
     margin-bottom: 90px;
 
     &__error {
-        color: #9B2C2C;
+        color: #9b2c2c;
         text-align: center;
         margin-bottom: 25px;
         font-size: 18px;
@@ -11,7 +11,7 @@
     &__info {
         text-align: center;
         font-size: 14px;
-        color: #4A5568;
+        color: #4a5568;
     }
 
     &__swatches {
