--- a/src/components/Swatches/swatches.scss
+++ b/src/components/Swatches/swatches.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 .swatches {
     margin-bottom: 90px;
 
@@ -22,7 +24,7 @@
 
     &__swatch {
         flex: 0 0 100%;
-        max-width: (100%/1);
+        max-width: 100%;
         padding: 0 5px;
         margin-bottom: 10px;
     }
@@ -35,25 +37,25 @@
 
     @media screen and (min-width: 480px) {
         &__swatch {
-            max-width: (100%/2);
+            max-width: math.div(100%, 2);
         }
     }
 
     @media screen and (min-width: 768px) {
         &__swatch {
-            max-width: (100%/4);
+            max-width: math.div(100%, 4);
         }
     }
 
     @media screen and (min-width: 1040px) {
         &__swatch {
-            max-width: (100%/6);
+            max-width: math.div(100%, 6);
         }
     }
 
     @media screen and (min-width: 1450px) {
         &__swatch {
-            max-width: (100%/8);
+            max-width: math.div(100%, 8);
         }
     }
 }
